Don't parse customspa.xml every time a new Person is instantiated.